[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/outros/Play-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/outros/Play-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 0.784314 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 0.54902 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="Theme" id=5]
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.505882 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.211765 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.717647 )

[sub_resource type="Theme" id=10]
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.00784314, 1, 0, 0.713726 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.00784314, 1, 0, 0.470588 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.00784314, 1, 0, 1 )

[sub_resource type="Theme" id=14]
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pause_text" type="Control" parent="VBoxContainer"]
margin_right = 1024.0

[node name="Label" type="Label" parent="VBoxContainer/pause_text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = 60.0
margin_right = 46.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="button" type="Control" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 4.0

[node name="pause_quit_btn" type="Button" parent="VBoxContainer/button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 260.0
margin_right = 512.0
margin_bottom = 290.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Sair do jogo"

[node name="back_menu_pause_btn" type="Button" parent="VBoxContainer/button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 330.0
theme = SubResource( 10 )
custom_fonts/font = SubResource( 6 )
text = "Voltar para o menu"

[node name="continuar_pause_btn" type="Button" parent="VBoxContainer/button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 340.0
margin_right = 512.0
margin_bottom = 370.0
theme = SubResource( 14 )
custom_fonts/font = SubResource( 6 )
text = "Continuar Jogo"

[connection signal="pressed" from="VBoxContainer/button/pause_quit_btn" to="." method="_on_pause_quit_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/button/back_menu_pause_btn" to="." method="_on_back_menu_pause_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/button/continuar_pause_btn" to="." method="_on_continuar_pause_btn_pressed"]
